// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  margin: -3rem 0 5rem;
}

.c1.in-header {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin: 0 0 0 2rem;
  line-height: 5rem;
}

<span
  className="c0"
>
  <h2
    className="sidebar-title c1"
  >
    <div />
  </h2>
</span>
`;

exports[`When using snapshots Should render with className and other props 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  margin: -3rem 0 5rem;
}

.c1.in-header {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin: 0 0 0 2rem;
  line-height: 5rem;
}

<span
  className="c0"
>
  <h2
    className="my-class sidebar-title c1"
  >
    <div />
  </h2>
</span>
`;

exports[`When using snapshots Should render with other props 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  margin: -3rem 0 5rem;
}

.c1.in-header {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin: 0 0 0 2rem;
  line-height: 5rem;
}

<span
  className="c0"
>
  <h2
    className="sidebar-title c1"
  >
    <div />
  </h2>
</span>
`;

exports[`When using snapshots Should render with the className prop 1`] = `
.c0 {
  font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
}

.c1 {
  margin: -3rem 0 5rem;
}

.c1.in-header {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  margin: 0 0 0 2rem;
  line-height: 5rem;
}

<span
  className="c0"
>
  <h2
    className="my-class sidebar-title c1"
  >
    <div />
  </h2>
</span>
`;
